# CppUtility

./: CMakeLists.txt  LICENSE  README.md
Helper/: Helper.cpp  Helper.h  Logger.h
sha256/: SHA256.h
